--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,7 +1,39 @@
 @import "~normalize.css";
+@import 'keyboard';
+@import 'key';
 
-canvas {
-    position: absolute;
-    z-index: 0;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+canvas {
+    z-index: 0;
+    position: absolute;
+    margin: 0 auto;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    overflow: hidden;
+
+    .content {
+        flex: 1 0 auto;
+
+        .container {
+            font: 16px/1.4 'Roboto', sans-serif;
+            background: #aa00ff;
+            min-height: 100vh;
+            padding: 1rem;
+            box-sizing: border-box;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            user-select: none;
+        }
+    }
+
+}
