--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,7 @@
 @import "~normalize.css";
 @import 'keyboard';
 @import 'key';
+@import 'glitch';
 
 * {
     margin: 0;
@@ -9,10 +10,17 @@
 }
 
 canvas {
-    z-index: 0;
     position: absolute;
     margin: 0 auto;
+    z-index: -1;
+    overflow: hidden;
 }
+
+body {
+    overflow: hidden;
+}
+
+
 
 .wrapper {
     display: flex;
@@ -25,7 +33,6 @@ canvas {
 
         .container {
             font: 16px/1.4 'Roboto', sans-serif;
-            background: #aa00ff;
             min-height: 100vh;
             padding: 1rem;
             box-sizing: border-box;
@@ -33,6 +40,27 @@ canvas {
             align-items: center;
             justify-content: center;
             user-select: none;
+
+            .output {
+                width: 950px;
+                height: 300px;
+                position: absolute;
+                top: 100px;
+                resize: none;
+                border: 1px solid rgb(46, 0, 52);
+                border-radius: 20px;
+                padding: 1rem;
+                font-family: 'Roboto', sans-serif;
+                font-size: 1.3rem;
+                line-height: 1.2;
+                color: rgb(255, 255, 255);
+                background-color: rgb(0, 0, 0, 0.4);
+                overflow: hidden;
+
+                &::placeholder {
+                    color: rgb(255, 255, 255, 0.6);
+                }
+            }
         }
     }
 
