--- a/src/style/glitch.scss
+++ b/src/style/glitch.scss
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0;
     z-index: 1;
-    color: white;
+    color: rgba(255, 255, 255);
 }
 
 
@@ -12,7 +12,7 @@
     position: absolute;
     z-index: 1;
     top: 0;
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(0, 0, 0, 0.3);
     width: 100%;
     height: 100%;
 }
