--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -20,8 +20,6 @@ body {
     overflow: hidden;
 }
 
-
-
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -47,14 +45,14 @@ body {
                 position: absolute;
                 top: 100px;
                 resize: none;
-                border: 1px solid rgb(46, 0, 52);
+                border: 1px solid rgb(255, 255, 255);
                 border-radius: 20px;
                 padding: 1rem;
                 font-family: 'Roboto', sans-serif;
-                font-size: 1.3rem;
+                font-size: 1.4rem;
                 line-height: 1.2;
                 color: rgb(255, 255, 255);
-                background-color: rgb(0, 0, 0, 0.4);
+                background-color: rgba(0, 0, 0, 0.4);
                 overflow: hidden;
 
                 &::placeholder {
