--- a/src/style/keyboard.scss
+++ b/src/style/keyboard.scss
@@ -1,24 +1,26 @@
 .keyboard {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     position: absolute;
+    flex-direction: column;
+    justify-content: space-around;
     top: 450px;
     gap: 1rem;
-    width: 60%;
+    width: 70%;
+    padding: 1.5rem;
     height: 350px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    background-color: rgb(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.4);
     color: #fff;
 
     .keyboard-row {
         display: flex;
-        gap: 1rem;
-        flex-direction: row;
         width: 100%;
-        justify-content: space-evenly;
+        gap: 1rem;
+        justify-content: space-around;
         align-items: center;
         border-radius: 5px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -27,20 +29,23 @@
 
         .keyboard-key {
             display: flex;
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
             height: 35px;
+            width: 100%;
             font-size: 15px;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+            background-color: rgba(7, 153, 158, 0.5);
             overflow: hidden;
             clear: both;
             transition: 0.5s all ease;
 
-        &:hover{
-            background-color: rgba(255, 255, 255, 0.575);
-        }}
+            &:hover {
+                background-color: rgba(114, 67, 67, 0.575);
+            }
+        }
     }
 }
