--- a/src/style/keyboard.scss
+++ b/src/style/keyboard.scss
@@ -1,51 +1,53 @@
 .keyboard {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  flex-direction: column;
+  justify-content: space-around;
+  top: 450px;
+  gap: 1rem;
+  width: 70%;
+  padding: 1.5rem;
+  height: 350px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #fff;
+
+  .keyboard-row {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    flex-direction: column;
-    justify-content: space-around;
-    top: 450px;
+    width: 100%;
     gap: 1rem;
-    width: 70%;
-    padding: 1.5rem;
-    height: 350px;
-    border-radius: 10px;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.1);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    background-color: rgba(0, 0, 0, 0.4);
-    color: #fff;
+    overflow: hidden;
+    clear: both;
 
-    .keyboard-row {
-        display: flex;
-        width: 100%;
-        gap: 1rem;
-        justify-content: space-around;
-        align-items: center;
-        border-radius: 5px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        overflow: hidden;
-        clear: both;
+    .keyboard-key {
+      display: flex;
+      height: 35px;
+      width: 100%;
+      font-size: 15px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 1px 1px 3px 3px rgba(255, 255, 255);
+      text-transform: uppercase;
 
-        .keyboard-key {
-            display: flex;
-            flex-wrap: wrap;
-            height: 35px;
-            width: 100%;
-            font-size: 15px;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            border-radius: 5px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-            background-color: rgba(7, 153, 158, 0.5);
-            overflow: hidden;
-            clear: both;
-            transition: 0.5s all ease;
-
-            &:hover {
-                background-color: rgba(114, 67, 67, 0.575);
-            }
-        }
     }
+  }
 }
+
+.active {
+  background-color: rgb(123, 81, 152);
+  color: #5800f6;
+  border: #000000 solid 1px;
+  border-radius: 5px;
+  transform: scale(0.9);
+}
+
