--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,64 +2,70 @@
 @import 'keyboard';
 @import 'key';
 @import 'glitch';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 canvas {
-    position: absolute;
-    margin: 0 auto;
-    z-index: -1;
-    overflow: hidden;
+  position: absolute;
+  margin: 0 auto;
+  z-index: -1;
+  overflow: hidden;
 }
 
 body {
-    overflow: hidden;
+  overflow: hidden;
+  background-image: url('../assets/img/background.avif');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  overflow: hidden;
 
-    .content {
-        flex: 1 0 auto;
+  .content {
+    flex: 1 0 auto;
 
-        .container {
-            font: 16px/1.4 'Roboto', sans-serif;
-            min-height: 100vh;
-            padding: 1rem;
-            box-sizing: border-box;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            user-select: none;
+    .container {
+      min-height: 100vh;
+      padding: 1rem;
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      user-select: none;
 
-            .output {
-                width: 950px;
-                height: 300px;
-                position: absolute;
-                top: 100px;
-                resize: none;
-                border: 1px solid rgb(255, 255, 255);
-                border-radius: 20px;
-                padding: 1rem;
-                font-family: 'Roboto', sans-serif;
-                font-size: 1.4rem;
-                line-height: 1.2;
-                color: rgb(255, 255, 255);
-                background-color: rgba(0, 0, 0, 0.4);
-                overflow: hidden;
+      .output {
+        width: 1100px;
+        height: 310px;
+        position: absolute;
+        display: flex;
+        flex-wrap: wrap;
+        top: 100px;
+        resize: none;
+        border: 1px solid rgb(255, 255, 255);
+        border-radius: 20px;
+        padding: 1rem;
+        font-family: 'Inter', sans-serif;
+        font-size: 1.4rem;
+        line-height: 1.4;
+        color: rgb(255, 255, 255);
+        background-color: rgba(0, 0, 0, 0.4);
+        overflow: hidden;
 
-                &::placeholder {
-                    color: rgb(255, 255, 255, 0.6);
-                }
-            }
+        &::placeholder {
+          color: rgb(255, 255, 255, 0.6);
         }
+      }
     }
+  }
 
 }
