--- a/src/style/keyboard.scss
+++ b/src/style/keyboard.scss
@@ -1,7 +1,6 @@
 .keyboard {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
   position: absolute;
   flex-direction: column;
@@ -12,8 +11,8 @@
   padding: 1.5rem;
   height: 350px;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  background-color: rgba(0, 0, 0, 0.4);
+  box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.5);
   color: #fff;
 
   .keyboard-row {
