--- a/src/style/key.scss
+++ b/src/style/key.scss
@@ -74,7 +74,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
@@ -95,7 +95,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
@@ -116,7 +116,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
@@ -137,7 +137,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
@@ -159,7 +159,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
@@ -180,7 +180,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
@@ -201,7 +201,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
@@ -222,7 +222,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
@@ -243,7 +243,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
@@ -264,7 +264,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
@@ -285,7 +285,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
@@ -306,7 +306,7 @@ $arrowColor: rgb(108, 0, 248, 0.3);
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(255, 255, 255, 0.575);
   overflow: hidden;
   clear: both;
