--- a/src/style/keyboard.scss
+++ b/src/style/keyboard.scss
@@ -11,8 +11,8 @@
   padding: 1.5rem;
   height: 350px;
   border-radius: 10px;
-  box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.1);
-  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 3px 3px 10px 10px rgba(120, 0, 178, 0.3);
+  background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
 
   .keyboard-row {
@@ -23,7 +23,7 @@
     align-items: center;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.1);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     clear: both;
 
